--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "python.analysis.extraPaths": [
         "./frontend",
         "./backend"
-    ]
+    ],
+    "python.analysis.autoImportCompletions": true
 }
