--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,8 @@
     "python.autoComplete.addBrackets": true,
     "python.testing.unittestEnabled": false, 
     "python.testing.pytestEnabled": true, 
-    "python.testing.pytestArgs": ["tests"]
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.analysis.completeFunctionParens": true
 }
